# Mini_Studio_Shoot_em_Up

./: .gitignore  CMakeLists.txt  README.md  setup_windows.bat
scripts/: check_prerequisites.bat  clean.bat  configure_project.bat  install_sfml.bat  install_vcpkg.bat
src/: main.cpp
